k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-lab-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-lab-api
  template:
    metadata:
      labels:
        app: k8s-lab-api
    spec:
      containers:
        - name: web
          image: k8s-lab-app:3.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet: { path: /healthz, port: 3000 }
            initialDelaySeconds: 2
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-lab-api
spec:
  type: ClusterIP            # disariya acilmiyor — Ingress uzerinden erisilecek
  selector:
    app: k8s-lab-api
  ports:
    - port: 80
      targetPort: 3000
