k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg          # HEADLESS servis: her pod'a kendi DNS adi verir
spec:
  clusterIP: None   # <- headless yapan satir
  selector:
    app: pg
  ports:
    - port: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pg
spec:
  serviceName: pg          # headless servisin adi — DNS icin sart
  replicas: 1
  selector:
    matchLabels:
      app: pg
  template:
    metadata:
      labels:
        app: pg
    spec:
      terminationGracePeriodSeconds: 20
      containers:
        - name: postgres
          image: postgres:17-alpine
          ports:
            - containerPort: 5432
              name: pg
          volumeMounts:
            - name: veri
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["sh","-c","pg_isready -U labuser -d labdb"]
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests: { cpu: 100m, memory: 128Mi }
            limits:   { cpu: 500m, memory: 512Mi }
  volumeClaimTemplates:      # HER pod icin ayri kalici disk
    - metadata:
        name: veri
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
