k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-lab-app
  labels:
    app: k8s-lab-app
spec:
  type: ClusterIP          # artik disariya Ingress uzerinden aciliyor
  selector:
    app: k8s-lab-app
  ports:
    - name: http           # ServiceMonitor port ADIYLA eslesir
      port: 80
      targetPort: 3000
