k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-lab-ingress
  annotations:
    # /api/xyz  ->  arka servise /xyz olarak gider (on eki soyar)
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: app.local
      http:
        paths:
          - path: /api(/|$)(.*)     # once ozel kural
            pathType: ImplementationSpecific
            backend:
              service:
                name: k8s-lab-api
                port:
                  number: 80
          - path: /()(.*)           # sonra genel kural
            pathType: ImplementationSpecific
            backend:
              service:
                name: k8s-lab-app
                port:
                  number: 80
